# ChangeLog for kde-base/oxygen-icons
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/oxygen-icons/ChangeLog,v 1.15 2009/11/09 00:16:50 alexxy Exp $

  08 Nov 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -oxygen-icons-4.3.2-r1.ebuild:
  Drop KDE 4.3.2

*oxygen-icons-4.3.3 (02 Nov 2009)

  02 Nov 2009; Alex Alexander <wired@gentoo.org> +oxygen-icons-4.3.3.ebuild:
  Version bump

  24 Oct 2009; Joseph Jezak <josejx@gentoo.org> oxygen-icons-4.3.1.ebuild,
  oxygen-icons-4.3.2-r1.ebuild:
  Marked ~ppc/~ppc64 for bug #280312.

  18 Oct 2009; Markus Meier <maekke@gentoo.org> oxygen-icons-4.3.1.ebuild:
  x86 stable, bug #287697

  12 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org>
  oxygen-icons-4.3.2-r1.ebuild:
  Add block for kmail 4.2.4

  10 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  oxygen-icons-4.3.1.ebuild:
  amd64 stable wrt #287697

*oxygen-icons-4.3.2-r1 (09 Oct 2009)

  09 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -oxygen-icons-4.3.2.ebuild, +oxygen-icons-4.3.2-r1.ebuild:
  Revision bump to use correct blocker on kmail.

  08 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -oxygen-icons-4.3.0.ebuild:
  Drop KDE 4.3.0

*oxygen-icons-4.3.2 (06 Oct 2009)

  06 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org>
  +oxygen-icons-4.3.2.ebuild:
  Version bump

  12 Sep 2009; Raúl Porcel <armin76@gentoo.org> oxygen-icons-4.3.0.ebuild,
  oxygen-icons-4.3.1.ebuild:
  Add ~alpha/~ia64 wrt #280312

*oxygen-icons-4.3.1 (01 Sep 2009)

  01 Sep 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  +oxygen-icons-4.3.1.ebuild:
  Version bump

  08 Aug 2009; Jeroen Roovers <jer@gentoo.org> oxygen-icons-4.3.0.ebuild:
  Marked ~hppa (bug #280312).

  04 Aug 2009; Alex Alexander <wired@gentoo.org> oxygen-icons-4.3.0.ebuild:
  block step-4.2.98 (collisions)

  04 Aug 2009; Alex Alexander <wired@gentoo.org> +metadata.xml:
  added metadata...

*oxygen-icons-4.3.0 (04 Aug 2009)
